# mosaictr

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: cell_line_tr_drift_research.md  technical_status.md
haplotr/: __init__.py  benchmark.py  cli.py  genotype.py  instability.py  utils.py
haplotr/tests/: test_genotype.py  test_instability.py
manuscript/: figures  haplotr_application_note.tex  haplotr_manuscript.tex  references.bib
mosaictr/: __init__.py  benchmark.py  cli.py  compare.py  genotype.py  instability.py  interruptions.py  strchive.py  utils.py  vcf_output.py  visualization.py
mosaictr/tests/: test_compare.py  test_genotype.py  test_instability.py  test_interruptions.py  test_strchive.py  test_utils.py  test_vcf_output.py  test_visualization.py
scripts/: analyze_allele_delta.py  analyze_confidence.py  analyze_cross_cellline_tissue.py  analyze_disease_loci.py  analyze_instability_hg002.py  analyze_mae_gap.py  analyze_mendelian.py  analyze_pacbio_noise.py  analyze_passage_drift.py  analyze_passage_drift_haplotagged.py  analyze_tp_gap.py  analyze_tp_gap_v2.py  analyze_tp_gap_v3.py  analyze_tp_gap_v4.py  analyze_tp_gap_v5.py  analyze_trio_transmission.py  analyze_vntr_mae.py  analyze_vntr_mae_v2.py  analyze_vntr_mae_v3.py  benchmark_genome_wide.py  check_carrier_distribution.py  compare_metrics.py  compare_metrics_realistic.py  compare_owl_mosaictr.py  compare_tools.py  compare_v2_v3.py  compare_v3_v4.py  design_composite_metric.py  diagnose_realign.py  diagnose_tp.py  diagnose_tp_mae.py  diagnose_tp_v3.py  evaluate_hybrid.py  evaluate_test.py  evaluate_test_twomodel.py  find_progressive_loci_v3.py  generate_fig_s1.py  generate_figures.py  generate_publication_figures.py  haplotag_hg008.sh  (+25 more)
