[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaictr"
version = "1.1.0"
description = "MosaicTR: haplotype-aware tandem repeat genotyping and somatic instability analysis from long-read sequencing"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Junsoo Kim"},
]
keywords = ["tandem-repeat", "genotyping", "somatic-instability", "long-read", "haplotype"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pysam>=0.22",
    "numpy>=1.24",
    "click>=8.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7", "seaborn>=0.12"]
realign = ["parasail>=1.3"]
all = ["matplotlib>=3.7", "seaborn>=0.12", "parasail>=1.3"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
mosaictr = "mosaictr.cli:main"

[project.urls]
Repository = "https://github.com/junsoopablo/mosaictr"

[tool.setuptools.packages.find]
include = ["mosaictr*"]

[tool.pytest.ini_options]
testpaths = ["mosaictr/tests"]
